--- a/Session 2/session2_1.html
+++ b/Session 2/session2_1.html
@@ -2,13 +2,39 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <title>Session2_1</title>
 </head>
 <body>
-    <h1>welcome to batch 170B </h1> 
+    <div>
+        <h1> GIỚI THIỆU BẢN THÂN </h1> <hr>
+
+        <div><p>Chào các bạn, rất vui được làm quen với các bạn, mình xin giới thiệu một ít về bản thân</p></div>
+        <div>Tôi tên: <b>TRUONG QUANG TRAI</b></div>
+        <div>Nơi sinh: QUANG NGAI</div> 
+        <div>Email: truongquangtrai.gts@gmail.com</div>
+        <div>Điện thoại: 0961.***.***</div> 
+
+        <p>Tôi đang học <b>Lập trình viên quốc tế</b> tại <i>Softech Aptech</i> </p>
+    </div>
+    <div>
+        <h1>CÁC HỌC KỲ TÔI SẼ HỌC</h1>
+        <ol>
+            <li>Học kỳ 1: Lập trình căn bản và Web</li>
+            <li>Học kỳ 2: Lập trình Java</li>
+            <li>Học Kỳ 3: Lập trình .NET</li>
+            <li>Học Kỳ 3: Lập trình nâng cao</li>
+        </ol>
+    </div> 
+    <div>
+        <h1>CÁC CHUYÊN MÔN TÔI SẼ HỌC</h1>
+        <ul>
+            <li>Lập trình .NET</li>
+            <li>Lập trình Java</li>
+            <li>Lập trình di động </li>
+            <li>Lập trình điện toán đám mây</li>
+        </ul>
+    </div>
+    <hr>
+    <div>&copy;TRUONG QUANG TRAI </div>
 </body>
 </html>
