--- a/Session 3/Session3_1.html
+++ b/Session 3/Session3_1.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Sesion3_1</title>
+    <style>
+        #hr1{
+            border: 1px solid ;
+            height: 1px;
+            opacity: 0.6;
+        }
+    </style>
 </head>
 <body>
+    <h1> Những án thơ thời áo trắng</h1>
+    <hr id="hr1"> 
+    <ul>
+        <li>Một giống cây si</li>
+        <li>Hát cùng thơ</li>
+        <li>Cơn mưa nhàn hạ</li>
+        <li>Tiếng guốc trong sân cũ</li>
+    </ul> 
     
-
-
+    <h1>Tác giả</h1> <hr>
+    <ol>
+        <li>Nguyễn Phi</li>
+        <li>Kiếp Nhân Gian </li>
+        <li>Đỗ Hồng</li>
+        <li>Nguyễn Hữu Chung </li>
+    </ol>
     
 </body>
 </html>
