--- a/Session 3/Session3_1.html
+++ b/Session 3/Session3_1.html
@@ -5,9 +5,8 @@
     <title>Sesion3_1</title>
     <style>
         #hr1{
-            border: 1px solid ;
+            border: 1px solid grey;   /*border: viền, 1px độ dày, solid:net lien, dashed: đứt, dotted: chấm */
             height: 1px;
-            opacity: 0.6;
         }
     </style>
 </head>
