--- a/Session 2/session2_3.html
+++ b/Session 2/session2_3.html
@@ -14,7 +14,7 @@
             background-repeat: no-repeat;
             background-size: cover; 
             background-position: center;
-            border-style: inset  ;
+            border: 1px solid gray  ;
             box-shadow: 5px 5px 10px rgb(33, 65, 66);
 
         }
